# gmanedit2

./: .hgignore  .hgtags  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.in  gmanedit.1  gmanedit.desktop
autom4te.cache/: output.0  requests  traces.0
m4/: ChangeLog
po/: ChangeLog  ca.gmo  ca.po  es.gmo  es.po  gl.gmo  gl.po  gmanedit.pot  ja.gmo  ja.po  sv.gmo  sv.po
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c  interface.h  main.c  support.c  support.h
