dnl Process this file with autoconf to produce a configure script.

AC_INIT(gmanedit, 0.5.0, jdegroot@web.de)
AC_CONFIG_SRCDIR(src/main.c)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

if test "${ac_cv_c_compiler_gnu}" = "yes"; then
  CFLAGS="${CFLAGS} -Wall"
fi

AC_SEARCH_LIBS(gzopen, z)

PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.10.0)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

PKG_CHECK_MODULES(GTKSOURCEVIEW, gtksourceview-2.0)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

AM_GNU_GETTEXT([external])
dnl Add the languages which your application supports here.
ALL_LINGUAS="gl es ja ca sv"

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
])

